<resources>
	<string name="app_name">parttime</string>
	<string name="quit">退出账户</string>
	<string name="headImg">头像</string>
	<string name="nickname">昵称</string>
	<string name="remark">个性签名</string>
	<string name="baseInfo">基本资料</string>
	<string name="love">兴趣爱好</string>
	<string name="ContactMethod">联系方式</string>
	<string name="changePass">修改登录密码</string>
	<string name="confirm">确定</string>
	<string name="CompanyLogo">企业logo</string>
	<string name="CompanyName">企业名称</string>
	<string name="CompanyHR">负责人</string>
	<string name="CompanyPhone">联系手机</string>
	<string name="CompanyTell">固定电话</string>
	<string name="CompanyLocation">企业地址</string>
	<string name="CompanyRemark">公司简介</string>
	<string name="save">保存</string>
	<string name="defaulthead">http://b.hiphotos.baidu.com/image/pic/item/730e0cf3d7ca7bcbdbff9d2ebc096b63f624a82f.jpg</string>
	<string name="SignUp">报名</string>
	<string name="title_activity_change_pass">ChangePassActivity</string>
	<string name="lyric_love">盼望你没有为我又再渡暗中淌泪 我不想留底 你的心空虚 盼望你别再让我象背负太深的罪 我的心如水 你不必痴醉 哦 你可知谁甘心归去 你与我之间有谁 是缘是情是童真 还是意外 有泪有罪有付出 还有忍耐 是人是墙是寒冬 藏在眼内 有日有夜有幻想 没法等待 盼望我别去后会共你在远方相聚 每一天望海 每一天相对 盼望你现已没有让我别去的恐惧 我即使离开 你的天空里 哦 你可知谁甘心归去 你与我之间有谁 是缘是情是童真 还是意外 有泪有罪有付出 还有忍耐 是人是墙是寒冬 藏在眼内 有日有夜有幻想 没法等待 多少春秋风雨改 多少崎岖不变爱 多少唏嘘的你在人海 是缘是情是童真 还是意外 有泪有罪有付出 还有忍耐 是人是墙是寒冬 藏在眼内 有日有夜有幻想 没法等待</string>

</resources>
