<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Activity.User.UserInfoDetailsActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/white"
			android:orientation="vertical"
			>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/headImg"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<com.facebook.drawee.view.SimpleDraweeView
					android:id="@+id/user_info_details_head"
					android:layout_width="50dp"
					android:layout_height="50dp"
					app:roundAsCircle="true"
					app:failureImageScaleType="fitXY"
					android:background="@mipmap/main_index_my_pressed"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>

		<ImageView
				android:layout_width="match_parent"
				android:layout_height="10dp"
				android:background="@color/defaultColor"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/nickname"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<TextView
					android:id="@+id/user_info_details_nick"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:text="hello"
					android:gravity="right"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/defaultColor"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/remark"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<TextView
					android:id="@+id/user_info_details_remark"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:text="hello"
					android:singleLine="true"
					android:gravity="right"
					android:ellipsize="end"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>

		<ImageView
				android:layout_width="match_parent"
				android:layout_height="10dp"
				android:background="@color/defaultColor"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/baseInfo"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/defaultColor"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/love"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/defaultColor"
				/>

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/ContactMethod"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<TextView
					android:id="@+id/user_info_details_ContactMethod"
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:textSize="16sp"
					android:text="110"
					android:gravity="right"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>
		<ImageView
				android:layout_width="match_parent"
				android:layout_height="10dp"
				android:background="@color/defaultColor"
				/>
		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal"
				>

			<TextView
					android:layout_weight="1"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/changePass"
					android:textSize="16sp"
					android:textColor="@color/black"
					/>

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:background="@mipmap/setting_cell_arrow"
					/>
		</LinearLayout>

		<ImageView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/defaultColor"
				/>

	</LinearLayout>
</ScrollView>
